# launchtime

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  formatter.py  launchtime.plist  launchtime.pro
src/: CMakeLists.txt  main.cpp
src/app/: Launchtime.cpp  Launchtime.h
src/controller/: LaunchpadController.cpp  LaunchpadController.h  LaunchpadSequencer.cpp  LaunchpadSequencer.h
src/interface/: HostInterface.cpp  HostInterface.h  LaunchpadInterface.cpp  LaunchpadInterface.h
src/midi/: MidiInput.cpp  MidiInput.h  MidiMessage.cpp  MidiMessage.h  MidiOutput.cpp  MidiOutput.h
src/ui/: LaunchtimeWindow.cpp  LaunchtimeWindow.h
